--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,8 @@ stages:
   - job: Veracode
     dependsOn: UploadAndScan 
     steps:
+    - bash: ls -rt '$(Build.SourcesDirectory)/target'
+    - bash: ls -rt '$(Build.ArtifactStagingDirectory)'
     - task: Veracode@3
       displayName: 'upload and scan'
       inputs:
