--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,11 @@ stages:
        Contents: '*.war'
        TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'BUild_Artifact'
+        publishLocation: 'Container'
 
   - job: Veracode
     dependsOn: UploadAndScan 
