--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -34,7 +34,9 @@ jobs:
           vid: ${{secrets.VERACODE_API_ID}}
           vkey: ${{secrets.VERACODE_API_KEY}}
           file: target/verademo.war 
-          veracode_policy_name: "Veracode Recommended High"
+          request_policy: "Veracode Recommended Very High COPY"
+          policy_file: "Veracode Recommended Very High COPY"
+        #  veracode_policy_name: "Veracode Recommended High"
           fail_build: true
           debug: 1
           
