--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -34,8 +34,9 @@ jobs:
           vid: ${{secrets.VERACODE_API_ID}}
           vkey: ${{secrets.VERACODE_API_KEY}}
           file: target/verademo.war 
-          request_policy: "Veracode Recommended Very High COPY"
-          policy_file: "Veracode Recommended Very High COPY"
+          veracode_policy_name: "Veracode Recommended High COPY"
+         # request_policy: "Veracode Recommended Very High COPY"
+         #  policy_file: "Veracode Recommended Very High COPY"
         #  veracode_policy_name: "Veracode Recommended High"
           fail_build: true
           debug: 1
