--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -34,10 +34,10 @@ jobs:
           vid: ${{secrets.VERACODE_API_ID}}
           vkey: ${{secrets.VERACODE_API_KEY}}
           file: target/verademo.war 
-          veracode_policy_name: "Veracode Recommended High COPY"
+          veracode_policy_name: "Testing Policy"
          # request_policy: "Veracode Recommended Very High COPY"
-         #  policy_file: "Veracode Recommended Very High COPY"
-        #  veracode_policy_name: "Veracode Recommended High"
+         # policy_file: "Veracode Recommended Very High COPY"
+         # veracode_policy_name: "Veracode Recommended High"
           fail_build: true
           
           
