--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
        AnalysisService: 'vera_Azure'
        veracodeAppProfile: 'Azure_vera integration'
        version: '$(build.buildNumber)'
-       filepath: '$(Pipeline.Workspace)/Verademo.war'
+       filepath: '$(Pipeline.Workspace)/build_Artifact/Verademo.war'
        optargs: '-deleteincompletescan 2 ' 
        createProfile: true
        importResults: true
@@ -68,7 +68,7 @@ stages:
        script: |
           curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
           unzip -o pipeline-scan-LATEST.zip
-          java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/Verademo.war" --baseline_file "baseline.json" 
+          java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
 
 - stage: 'Deploy_to_sca'
   jobs:
