--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,18 +70,72 @@ stages:
           unzip -o pipeline-scan-LATEST.zip
           java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
 
-- stage: 'Deploy_to_sca'
-  jobs:
-  - job: 'SCA_Agent' 
-    steps:
-     - task: Bash@3
-       displayName: 'Veracode SCA scan'
-       inputs:
+    - task: Bash@3
+      displayName: 'Veracode SCA scan'
+      inputs:
         targetType: 'inline'
         script: |
           export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
           curl -sSL https://download.sourceclear.com/ci.sh | sh
     
+
+
+- stage: DEV
+  dependsOn: Build
+  jobs:
+  - deployment: Dev
+    environment: Dev
+    strategy:
+     runOnce:
+       deploy:
+         steps:
+         - task: DownloadPipelineArtifact@2
+           inputs:
+            buildType: 'current'
+            targetPath: '$(Pipeline.Workspace)'
+
+         - task: Veracode@3
+           displayName: 'upload and scan'
+           inputs:
+            ConnectionDetailsSelection: 'Service Connection'
+            AnalysisService: 'vera_Azure'
+            veracodeAppProfile: 'Azure_vera integration'
+            version: '$(build.buildNumber)'
+            filepath: '$(Pipeline.Workspace)/build_Artifact/Verademo.war'
+            optargs: '-deleteincompletescan 2 ' 
+            createProfile: true
+            importResults: true
+            failBuildIfUploadAndScanBuildStepFails: false
+            maximumWaitTime: '60'
+
+         - task: Bash@3
+           displayName: 'Veracode pipeline scan'
+           inputs:
+            targetType: 'inline'
+            script: |
+             curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+             unzip -o pipeline-scan-LATEST.zip
+             java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
+         - task: Bash@3
+           displayName: 'Veracode SCA scan'
+           inputs:
+            targetType: 'inline'
+            script: |
+             export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
+             curl -sSL https://download.sourceclear.com/ci.sh | sh
+    
+   
+
+
+
+
+
+
+
+
+
+
+
 
 #steps:
 #- task: PowerShell@2
