--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -58,9 +58,8 @@ jobs:
         export VERACODE_API_KEY_SECRET=${{ env.V_KEY}}
         ID="1845628"
         SANDBOX_ID="5655734"
-        
         http --auth-type veracode_hmac GET "https://analysiscenter.veracode.com/api/5.0/getbuildlist.do?app_id=$ID&sandbox_id=$SANDBOX_ID"
-  
+        http --auth-type=veracode_hmac "https://api.veracode.com/srcclr/sbom/v1/targets/21b3a4bc-0876-44e2-823e-7e5934d09e36/cyclonedx?type=application"
 
 
 
