--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -17,21 +17,26 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+#      uses: actions/setup-java@v2
+#      with:
+#        java-version: '11'
+#        distribution: 'adopt'
+#        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+#        settings-path: ${{ github.workspace }} # location for the settings.xml file
         
     - name: Build with Maven
       run: mvn package
 
-    - shell: bash
+    - name: Set up secret file
       env:
-        SUPER_SECRET: ${{secrets.VERACODE_API_ID}}
+        DEBUG_PASSWORD: ${{ secrets.DEBUG_PASSWORD }}
+        DEBUG_SECRET_KEY: ${{ secrets.DEBUG_SECRET_KEY }}
       run: |
-         example-command "$SUPER_SECRET"
+        echo $DEBUG_PASSWORD >> secrets.txt
+        echo $DEBUG_SECRET_KEY >> secrets.txt
+
+    - name: Run tmate
+      uses: mxschmitt/action-tmate@v2
 
         
   # This workflow contains a job to build and submit pipeline scan, you will need to customize the build process accordingly and make sure the artifact you build is used as the file input to the pipeline scan file parameter
