--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -24,16 +24,14 @@ jobs:
 #        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 #        settings-path: ${{ github.workspace }} # location for the settings.xml file
         
-    - name: Build with Maven
-      run: mvn package
+#    - name: Build with Maven
+#      run: mvn package
 
     - name: Set up secret file
       env:
-        DEBUG_PASSWORD: ${{ secrets.DEBUG_PASSWORD }}
-        DEBUG_SECRET_KEY: ${{ secrets.DEBUG_SECRET_KEY }}
+        DEBUG_PASSWORD: ${{secrets.VERACODE_API_ID}}
       run: |
         echo $DEBUG_PASSWORD >> secrets.txt
-        echo $DEBUG_SECRET_KEY >> secrets.txt
 
     - name: Run tmate
       uses: mxschmitt/action-tmate@v2
