--- a/.github/workflows/veracode3.yml
+++ b/.github/workflows/veracode3.yml
@@ -42,6 +42,6 @@ jobs:
     - name: Veracode Policy Scan
       run: |
           VERACODE_WRAPPER_VERSION=$(curl -sS "https://search.maven.org/solrsearch/select?q=g:%22com.veracode.vosp.api.wrappers%22&rows=20&wt=json" | jq -r '.response.docs[0].latestVersion') && curl -sS -o veracode-wrapper.jar "https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/${VERACODE_WRAPPER_VERSION}/vosp-api-wrappers-java-${VERACODE_WRAPPER_VERSION}.jar"
-          java -jar veracode-wrapper.jar -vid ${{ secrets.VERACODE_API_ID }} -vkey ${{ secrets.VERACODE_API_KEY }} -action uploadandscan -appname "Github-Veracode" -createprofile true -filepath "app/target/verademo.war" -version ${{github.run_number}} -sandboxname "Github-Manula-Script" -createsandbox true -autoscan true
+          java -jar veracode-wrapper.jar -vid ${{ secrets.VERACODE_API_ID }} -vkey ${{ secrets.VERACODE_API_KEY }} -action uploadandscan -appname "Github-Veracode" -createprofile true -filepath "target/verademo.war" -version ${{github.run_number}} -sandboxname "Github-Manula-Script" -createsandbox true -autoscan true
 
   
