--- a/.github/workflows/SBOM.Yml
+++ b/.github/workflows/SBOM.Yml
@@ -1,10 +1,22 @@
 name: SBOM
+
 on:
-  workflow_dispatch
+  workflow_dispatch:
+
 jobs:
-  build:
+  sbom:
+    name: setup
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    container: 
+      image: veracode/api-signing:latest
+    env:
+      VERACODE_API_KEY_ID: ${{ secrets.VERACODE_API_ID }}
+      VERACODE_API_KEY_SECRET : ${{ secrets.VERACODE_API_KEY }}
+      APP_NAME : ${{ secrets.VERACODE_APP_NAME }}
+
     steps:
+      - name: generate-sbom
+        run: | 
+          appguid=$(http --auth-type=veracode_hmac GET "https://api.veracode.com/appsec/v1/applications?name=${APP_NAME}" | jq -r '._embedded.applications[0].guid')
+          echo GUID: ${appguid}
+          http --auth-type=veracode_hmac GET "https://api.veracode.com/srcclr/sbom/v1/targets/${appguid}/cyclonedx?type=application" | jq
