--- a/.github/workflows/veracode5.yml
+++ b/.github/workflows/veracode5.yml
@@ -23,6 +23,6 @@ jobs:
         settings-path: ${{ github.workspace }}
 
 
-    - name: veracode/api-wrapper-java:latest
-       run:
+    - name: veracode
+      run: |
           java -jar VeracodeJavaAPI.jar -action uploadandscan -filepath app/target/verademo.war -vid '${ { secrets.VERACODE_API_ID } }' -vkey '${ { secrets.VERACODE_API_KEY } }' -version '${ { github.run_number } }' -autoscan true -appname GITHUB -createprofile true -deleteincompletescan 2 -scantimeout 60 
