--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,22 +61,22 @@ stages:
        failBuildIfUploadAndScanBuildStepFails: false
        maximumWaitTime: '60'
 
-    - task: Bash@3
-      displayName: 'Veracode pipeline scan'
-      inputs:
-       targetType: 'inline'
-       script: |
-          curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
-          unzip -o pipeline-scan-LATEST.zip
-          java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
+    # - task: Bash@3
+    #   displayName: 'Veracode pipeline scan'
+    #   inputs:
+    #    targetType: 'inline'
+    #    script: |
+    #       curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+    #       unzip -o pipeline-scan-LATEST.zip
+    #       java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
 
-    - task: Bash@3
-      displayName: 'Veracode SCA scan'
-      inputs:
-        targetType: 'inline'
-        script: |
-          export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
-          curl -sSL https://download.sourceclear.com/ci.sh | sh
+    # - task: Bash@3
+    #   displayName: 'Veracode SCA scan'
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
+    #       curl -sSL https://download.sourceclear.com/ci.sh | sh
     
 
 
@@ -99,7 +99,7 @@ stages:
            inputs:
             ConnectionDetailsSelection: 'Service Connection'
             AnalysisService: 'vera_Azure'
-            veracodeAppProfile: 'Azure_vera integration'
+            veracodeAppProfile: 'myapp'
             version: '$(build.buildNumber)'
             filepath: '$(Pipeline.Workspace)/build_Artifact/Verademo.war'
             optargs: '-deleteincompletescan 2 ' 
@@ -108,21 +108,22 @@ stages:
             failBuildIfUploadAndScanBuildStepFails: false
             maximumWaitTime: '60'
 
-         - task: Bash@3
-           displayName: 'Veracode pipeline scan'
-           inputs:
-            targetType: 'inline'
-            script: |
-             curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
-             unzip -o pipeline-scan-LATEST.zip
-             java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
-         - task: Bash@3
-           displayName: 'Veracode SCA scan'
-           inputs:
-            targetType: 'inline'
-            script: |
-             export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
-             curl -sSL https://download.sourceclear.com/ci.sh | sh
+        #  - task: Bash@3
+        #    displayName: 'Veracode pipeline scan'
+        #    inputs:
+        #     targetType: 'inline'
+        #     script: |
+        #      curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+        #      unzip -o pipeline-scan-LATEST.zip
+        #      java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Pipeline.Workspace)/build_Artifact/Verademo.war" --baseline_file "baseline.json" 
+
+        #  - task: Bash@3
+        #    displayName: 'Veracode SCA scan'
+        #    inputs:
+        #     targetType: 'inline'
+        #     script: |
+        #      export SRCCLR_API_TOKEN=$(SRCCLR_API_TOKEN)
+        #      curl -sSL https://download.sourceclear.com/ci.sh | sh
     
    
 
