--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -53,6 +53,10 @@ jobs:
             file: "verademo.war" 
             debug: 1
             fail_build: false
+        - name: get flaw file
+          uses: actions/download-artifact@v4
+          with:
+            name: Veracode Pipeline-Scan Results    
 
   veracode-fix:
     runs-on: ubuntu-latest
