--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -53,10 +53,6 @@ jobs:
             file: "verademo.war" 
             debug: 1
             fail_build: false 
-            
-        - uses: actions/upload-artifact@v4
-          with:
-            name: Veracode Pipeline-Scan Results
 
   veracode-fix:
     runs-on: ubuntu-latest
@@ -69,7 +65,7 @@ jobs:
       - name: get flaw file
         uses: actions/download-artifact@v4
         with:
-          name: Veracode Pipeline-Scan Results
+          name: "Veracode Pipeline-Scan Results" 
           
       - name: Create fixes from static findings
         id: convert
