--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -56,7 +56,7 @@ jobs:
         - name: upload flaw file
           uses: actions/upload-artifact@v4
           with:
-            name: Veracode Pipeline-Scan Results
+            name: ../Veracode-Pipeline-Scan-Results
 
   veracode-fix:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
       - name: get flaw file
         uses: actions/download-artifact@v4
         with:
-          name: Veracode Pipeline-Scan Results
+          name: Veracode-Pipeline-Scan-Results
           
       - name: Create fixes from static findings
         id: convert
