--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -56,7 +56,8 @@ jobs:
         - name: upload flaw file
           uses: actions/upload-artifact@v4
           with:
-            name: ../Veracode-Pipeline-Scan-Results
+            name: Veracode-Pipeline-Scan-Results
+            path: ${{ github.workspace }}
 
   veracode-fix:
     runs-on: ubuntu-latest
