--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -57,7 +57,7 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: Veracode-Pipeline-Scan-Results
-            path: ${{ github.workspace }}
+            path: /Veracode-Pipeline-Scan-Results
 
   veracode-fix:
     runs-on: ubuntu-latest
