--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -44,6 +44,7 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: verademo.war
+            
         - name: pipeline-scan action step
           id: pipelien-scan
           uses: veracode/Veracode-pipeline-scan-action@v1.0.12
@@ -53,6 +54,11 @@ jobs:
             file: "verademo.war" 
             debug: 1
             fail_build: false 
+
+        - uses: actions/upload-artifact@v4
+          with:
+            name: results.json
+            path: /results.json 
             
   veracode-fix:
     runs-on: ubuntu-latest
@@ -65,7 +71,7 @@ jobs:
       - name: get flaw file
         uses: actions/download-artifact@v4
         with:
-          name: Veracode-Pipeline-Scan-Results
+          name: results.json
           
       - name: Create fixes from static findings
         id: convert
