--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -84,7 +84,7 @@ jobs:
           inputFile: filtered_results.json
           vid: ${{ secrets.VERACODE_API_ID }}
           vkey: ${{ secrets.VERACODE_API_KEY }}
-          source_base_path_1: "com:java/com/veracode/verademo"
+          source_base_path_1: "com/:java/com/veracode/verademo"
           source_base_path_2: "WEB-INF:src/main/webapp/WEB-INF"
           language: java
           cwe: '117'
